--- a/pages/home/page.yml
+++ b/pages/home/page.yml
@@ -24,6 +24,11 @@ slots:
               blockPageLoad: false
               preventDefault: false
               index: 0
+            - action: '17193894770860.5044530861863039'
+              paramCode: ''
+              blockPageLoad: false
+              preventDefault: false
+              index: 1
         slots:
           - id: '2'
             name: content
