removed default book

--- a/pages/home/components/publicLuLiteracyTextsTable.yml
+++ b/pages/home/components/publicLuLiteracyTextsTable.yml
@@ -89,6 +89,7 @@ properties:
     dataValue: 'false'
     withData: false
   showFilter: true
+  selectedRowIndex: '-1'
 actions: {}
 slots:
   - id: '17194063382220.983060171851805'
