--- a/pages/home/actions/create_currHead/create-entity.yml
+++ b/pages/home/actions/create_currHead/create-entity.yml
@@ -21,4 +21,6 @@ valueByMode:
       value: '{{params.yearDisp}} : {{params.termDisp}}'
     year_number:
       value: '{{params.num}}'
+    driving_question:
+      value: '{{params.drvq}}'
   custom: ''
