--- a/pages/home/page.yml
+++ b/pages/home/page.yml
@@ -49,3 +49,4 @@ slots:
               - components/divider.yml
               - components/divider2.yml
               - components/publicLuLiteracyTextsTable.yml
+              - components/inp_drivequest.yml
