--- a/actions/actions-order.yml
+++ b/actions/actions-order.yml
@@ -1,5 +1,11 @@
+- Find_account_Services_and_Roles
+- appStart
+- appInit
 - startCreating
 - create_topic
 - create_subject
 - create_pillar
 - onClick
+- AccountData
+- ErrorCount
+- User
