--- a/pages/home/page.yml
+++ b/pages/home/page.yml
@@ -18,17 +18,7 @@ slots:
             - xl
             - xs
         actions:
-          pageLoad:
-            - action: '17193904379520.02947835777843877'
-              paramCode: ''
-              blockPageLoad: false
-              preventDefault: false
-              index: 0
-            - action: '17193894770860.5044530861863039'
-              paramCode: ''
-              blockPageLoad: false
-              preventDefault: false
-              index: 1
+          pageLoad: []
         slots:
           - id: '2'
             name: content
