--- a/header/components/modal/accordion/accordion.yml
+++ b/header/components/modal/accordion/accordion.yml
@@ -45,3 +45,4 @@ slots:
       - accordionItem2/accordionItem2.yml
       - accordionItem3/accordionItem3.yml
       - accordionItem4/accordionItem4.yml
+      - accordionItem5/accordionItem5.yml
