--- a/pages/home/page.yml
+++ b/pages/home/page.yml
@@ -1,6 +1,9 @@
 id: '1'
-name: Home
+name: New Term
 url: home
+roleIds: []
+disableInMenu: false
+hideFromMenu: false
 slots:
   - id: '1'
     name: content
