--- a/header/components/button.yml
+++ b/header/components/button.yml
@@ -34,6 +34,7 @@ properties:
     - xl
     - xs
   text: Save
+  __UIBAKERY__SHOW__CONDITION__CODE__: '{{activeRoute.name == "Exisiting Term"}}'
 actions:
   buttonClick:
     - action: '17210551517510.5730617853845335'
