changed year order and hid existing term page

--- a/actions/get_acYears/get_acYears.yml
+++ b/actions/get_acYears/get_acYears.yml
@@ -25,7 +25,7 @@ steps:
           orderBy:
             value: sorting
           orderDirection:
-            value: asc
+            value: desc
         valueType: custom
       - type: additionalParams
         value:
