--- a/header/components/horizontalMenu.yml
+++ b/header/components/horizontalMenu.yml
@@ -4,7 +4,7 @@ parentSlotId: '17193917817760.3972016968311236'
 styles:
   xl:
     gridItem:
-      x: 3
+      x: 4
       y: 0
       w: 12
       h: 10
@@ -47,7 +47,9 @@ properties:
       },
       {
         title: 'Exisiting Term',
-        link: '/exisiting-term'
+        link: '/exisiting-term',
+        hidden: true
       }
     ]
+actions: {}
 slots: []
