--- a/header/components/horizontalMenu.yml
+++ b/header/components/horizontalMenu.yml
@@ -42,6 +42,12 @@ properties:
   items: |-
     [
       {
+        title: 'Welcome',
+        link: '/welcome',
+        disabled: true,
+        hidden: true
+      },
+      {
         title: 'New Term',
         link: '/home'
       },
@@ -51,5 +57,10 @@ properties:
         hidden: true
       }
     ]
+  __UIBAKERY__SHOW__CONDITION__CODE__: '{{activeRoute.name != "Welcome"}}'
+  __UIBAKERY__SHOW__CONDITION__PRESERVE__:
+    value: false
+    dataValue: 'false'
+    withData: false
 actions: {}
 slots: []
