--- a/header/components/modal/accordion/accordionItem3/view_4/slct_topCache.yml
+++ b/header/components/modal/accordion/accordionItem3/view_4/slct_topCache.yml
@@ -86,6 +86,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17194047230060.5946239600012524'
         index: 1
         slots: []
