--- a/header/components/modal/accordion/accordionItem5/view_6/slct_targ_top.yml
+++ b/header/components/modal/accordion/accordionItem5/view_6/slct_targ_top.yml
@@ -70,6 +70,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210492831110.8282836643251701'
         index: 1
         slots: []
