--- a/pages/exisiting-term/components/slct_acYear2.yml
+++ b/pages/exisiting-term/components/slct_acYear2.yml
@@ -83,6 +83,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210536295260.29107425500070594'
         index: 0
         slots: []
