--- a/pages/home/components/slct_phase_OvercomingBarriers.yml
+++ b/pages/home/components/slct_phase_OvercomingBarriers.yml
@@ -70,6 +70,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193906491980.6382638983758007'
         index: 0
         slots: []
