--- a/actions/newAction/newAction.yml
+++ b/actions/newAction/newAction.yml
@@ -25,8 +25,12 @@ steps:
                     interpolationType: string
                   - type: queryParams
                     value:
-                      - name: ''
-                        value: ''
+                      mode: structured
+                      value:
+                        custom: ''
+                        structured:
+                          - name: ''
+                            value: ''
                     valueType: custom
                     interpolationType: string
                 level: 0
