--- a/header/components/modal/accordion/accordionItem2/view_3/slct_subjPill.yml
+++ b/header/components/modal/accordion/accordionItem2/view_3/slct_subjPill.yml
@@ -69,6 +69,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17194055372860.27431305523934535'
         index: 0
         slots: []
