--- a/header/components/modal/accordion/accordionItem5/view_6/slct_targ_type.yml
+++ b/header/components/modal/accordion/accordionItem5/view_6/slct_targ_type.yml
@@ -86,6 +86,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210495972730.09009375666007924'
         index: 1
         slots: []
