--- a/pages/exisiting-term/components/card2/view15/tbl_caaTopics2.yml
+++ b/pages/exisiting-term/components/card2/view15/tbl_caaTopics2.yml
@@ -77,7 +77,6 @@ properties:
       border: none
   rowHeight: small
   heightMode: auto
-  showFilter: true
   multiplyRowSelection:
     value: true
     dataValue: 'false'
@@ -87,6 +86,10 @@ properties:
     dataValue: row
     withData: false
   selectedRowIndex: '-1'
+  showFilter:
+    withData: false
+    dataValue: 'false'
+    value: true
 parentSlotId: '17210539416120.4383570826815224'
 index: 0
 actions: {}
@@ -109,6 +112,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210539416120.3877990707213468'
         index: 0
         slots: []
@@ -127,6 +135,11 @@ slots:
           width: 200
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - blur
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210539416120.3877990707213468'
         index: 1
         slots: []
@@ -145,6 +158,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210539416120.3877990707213468'
         index: 2
         slots: []
@@ -163,6 +181,11 @@ slots:
           width: 200
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - blur
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210539416120.3877990707213468'
         index: 3
         slots: []
@@ -181,6 +204,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210539416120.3877990707213468'
         index: 4
         slots: []
@@ -199,6 +227,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210539416120.3877990707213468'
         index: 5
         slots: []
@@ -217,6 +250,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210539416120.3877990707213468'
         index: 6
         slots: []
