--- a/pages/exisiting-term/components/slct_term2.yml
+++ b/pages/exisiting-term/components/slct_term2.yml
@@ -91,6 +91,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17210536940090.4401578059025155'
         index: 0
         slots: []
