--- a/pages/home/components/card/view4/tbl_sTopics.yml
+++ b/pages/home/components/card/view4/tbl_sTopics.yml
@@ -76,7 +76,6 @@ properties:
       border: none
   rowHeight: small
   heightMode: auto
-  showFilter: true
   multiplyRowSelection:
     value: true
     dataValue: 'false'
@@ -86,6 +85,10 @@ properties:
     dataValue: row
     withData: false
   selectedRowIndex: '-1'
+  showFilter:
+    withData: false
+    dataValue: 'false'
+    value: true
 actions: {}
 slots:
   - id: '17193926288680.7098922506965124'
@@ -106,6 +109,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193926288680.7098922506965124'
         index: 0
         slots: []
@@ -124,6 +132,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193926288680.7098922506965124'
         index: 1
         slots: []
@@ -142,6 +155,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193926288680.7098922506965124'
         index: 4
         slots: []
@@ -160,6 +178,11 @@ slots:
           width: 200
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - blur
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193926288680.7098922506965124'
         index: 3
         slots: []
@@ -178,6 +201,11 @@ slots:
           width: 200
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - blur
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193926288680.7098922506965124'
         index: 2
         slots: []
@@ -196,6 +224,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193926288680.7098922506965124'
         index: 5
         slots: []
@@ -214,6 +247,11 @@ slots:
           width: 120
           widthMode: auto
           filter: true
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193926288680.7098922506965124'
         index: 6
         slots: []
