--- a/pages/home/components/slct_acYear.yml
+++ b/pages/home/components/slct_acYear.yml
@@ -83,6 +83,11 @@ slots:
           __UIBAKERY__RESPONSIVE__SHOW__CONDITION__CODE__:
             - xl
             - xs
+          forceEditSubmitTriggers:
+            - enter
+          labelConfig:
+            align: left
+            position: vertical
         parentSlotId: '17193898591170.8554360233869038'
         index: 0
         slots: []
